# kafru

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
docs/: surrealdb  threading.excalidraw
src/: agent.rs  cron_schedule.rs  database.rs  lib.rs  manager.rs  metric.rs  queue.rs  schedule.rs  scheduler.rs  task.rs  worker.rs
src/tests/: mod.rs  test_agent.rs  test_command.rs  test_cron_schedule.rs  test_database.rs  test_helper.rs  test_manager.rs  test_queue.rs  test_schedule.rs  test_scheduler.rs  test_task.rs  test_task_handler.rs  test_worker.rs
