[package]
name = "kafru"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
chrono = "0.4.38"
fake = "2.9.2"
futures = "0.3.30"
rand = "0.8.5"
rayon = "1.10.0"
rayon-core = "1.12.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
surrealdb = "1.5.4"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.10.0"
