[package]
name = "kafru"
version = "0.1.6"
edition = "2021"
authors = ["JP Mateo <jpmateo022@gmail.com>"]
description = "kafru is a Python Celery-inspired queuing library for Rust, using cron for scheduling and SurrealDB for storing queues, metrics, and schedules."
license = "MIT"
repository = "https://github.com/j-p-d-e-v/kafru"
keywords = ["queue", "task", "cron", "surrealdb", "scheduling"]
categories = ["asynchronous", "database","web-programming"]
homepage = "https://github.com/j-p-d-e-v/kafru"
documentation = "https://docs.rs/kafru"
readme = "README.md"

[dependencies]
async-trait = "0.1.82"
chrono = "0.4.38"
cron = "0.12.1"
crossbeam = "0.8.4"
fake = "2.9.2"
futures = "0.3.30"
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
surrealdb = "2.0.4"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.10.0"
